# controllers/AllergensService.js
@@ -1,0 +1,28 @@
+'use strict';
+
+exports.allergensGET = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  **/
+  
+  
+  var examples = {};
+  examples['application/json'] = {
+  "allergens" : [ {
+    "name" : "aeiou",
+    "description" : "aeiou",
+    "id" : { }
+  } ]
+};
+  
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+  
+}
+
