# controllers/Search.js
@@ -6,6 +6,10 @@ var url = require('url');
 var Search = require('./SearchService');
 
 
+module.exports.allergensGET = function allergensGET (req, res, next) {
+  Search.allergensGET(req.swagger.params, res, next);
+};
+
 module.exports.ingredientsGET = function ingredientsGET (req, res, next) {
   Search.ingredientsGET(req.swagger.params, res, next);
 };
